pro player mobile order fixed

--- a/paginas/proplayers.html
+++ b/paginas/proplayers.html
@@ -50,32 +50,33 @@
     <main>
         <section>
             <div class="players">
-                <div class="pic-player">
-                    <img src="../imagenes/Theviper.png" alt="theviper">
+                <div class="pp1">
+                    <div class="pic-player">
+                        <img src="../imagenes/Theviper.png" alt="theviper">
+                    </div>
+                    <div class="info">
+                        <h2>The Viper</h2>
+                        <p>TheViper is known for his late game capabilities, decision making, exceptional macro and unit control. Becoming an active player in 2010, TheViper has won more tournaments than any other AoE2 player in history and is often considered to be the best AoE2 player of all time. In May 2019 TheViper moved to Leipzig, Germany.</p>
+                    </div>
                 </div>
-                <div class="info">
-                    <h2>The Viper</h2>
-                    <p>TheViper is known for his late game capabilities, decision making, exceptional macro and unit control. Becoming an active player in 2010, TheViper has won more tournaments than any other AoE2 player in history and is often considered to be the best AoE2 player of all time. In May 2019 TheViper moved to Leipzig, Germany.</p>
+                <div class="pp2">
+                    <div class="info">
+                        <h2>Liereyy</h2>
+                        <p>One of the younger members of the in the scene, who is best known for his ability to intensively micromanage his units without missing a beat in his economy. His aggressive, archer-heavy, meta-oriented style has led him to a string of impressive results, with victories in King of the Desert 3 and Red Bull Wololo 4, along with second place finishes in Red Bull Wololo 3, The Open Classic, Red Bull Wololo 5, and Holy Cup. Liereyy currently plays for Aftermath.</p>
+                    </div>
+                    <div class="pic-player">
+                        <img src="../imagenes/liereyy.jpg" alt="liereyy">
+                    </div>
                 </div>
-                <div class="info">
-                    <h2>Liereyy</h2>
-                    <p>One of the younger members of the in the scene, who is best known for his ability to intensively micromanage his units without missing a beat in his economy. His aggressive, archer-heavy, meta-oriented style has led him to a string of impressive results, with victories in King of the Desert 3 and Red Bull Wololo 4, along with second place finishes in Red Bull Wololo 3, The Open Classic, Red Bull Wololo 5, and Holy Cup. Liereyy currently plays for Aftermath.</p>
+                <div class="pp1">   
+                    <div class="pic-player">
+                        <img src="../imagenes/daut.jpg" alt="daut">
+                    </div>
+                    <div class="info">
+                        <h2>Daut</h2>
+                        <p>DauT has been playing competitive Age of Empires 2 since 2002, taking few breaks in the past 19 years. Despite being a bit slower than some of the younger players, he more than makes up for it with his superb macro and creative strategies. While he is often prone to overestimating his chances, that same confidence and his unparalleled experience make him utterly unflappable under pressure. After winning Red Bull Wololo 3, he also took top 4 in Holy Cup. DauT currently plays for Gamer Legion.</p>
+                    </div>
                 </div>
-                <div class="pic-player">
-                    <img src="../imagenes/liereyy.jpg" alt="liereyy">
-                </div>   
-                <div class="pic-player">
-                    <img src="../imagenes/daut.jpg" alt="daut">
-                </div>
-                <div class="info">
-                    <h2>Daut</h2>
-                    <p>DauT has been playing competitive Age of Empires 2 since 2002, taking few breaks in the past 19 years. Despite being a bit slower than some of the younger players, he more than makes up for it with his superb macro and creative strategies. While he is often prone to overestimating his chances, that same confidence and his unparalleled experience make him utterly unflappable under pressure. After winning Red Bull Wololo 3, he also took top 4 in Holy Cup. DauT currently plays for Gamer Legion.</p>
-                </div>
-            </div>
-        </section>
-        <section>
-            <div>
-                
             </div>
         </section>
     </main>
